--- a/function-problems/problem-1/index.html
+++ b/function-problems/problem-1/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Function Problem 1</title>
 </head>
 <body>
 
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
