Addition of steps. Define of id for P element so JS code can interate to change background color of button

--- a/dom-problems/problem-1/index.html
+++ b/dom-problems/problem-1/index.html
@@ -1,3 +1,7 @@
+<!-- Create a basic HTML page with a P element and a button on it. 
+Then, write a JavaScript function to set the background color of that paragraph 
+using an "onclick" event added to a button in the UI. -->>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +10,11 @@
 	<title>DOM: Problem 1</title>
 </head>
 <body>
-	<p><button id="color" type="button" onclick="backgroundColor()">Click Me!</button></p>
+	<div>
+		<p id="introsection">
+			<button onclick="backgroundColor()">Click Me!</button>
+		</p>
+	</div>
 
 	<script type="text/javascript" src="script.js"></script>
 </body>
