Creation of function of JS code to  iterate HREF on anchor element. Refactor of index.html

--- a/dom-problems/problem-2/index.html
+++ b/dom-problems/problem-2/index.html
@@ -13,8 +13,13 @@ adding it as the text for another P element on the page. -->
 <body>
 	<div>
 		<p>
-			<button onclick="hrefLink()">Click Me!</button>
+			<a href="https://www.espn.com" id="link">Click below for more info</a>
 		</p>
+
+		<button onclick="hrefLink()">More Info</button>
+
+		<p id ="appear"></p>
+
 	</div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
