Addition of target attribute in anchor tag to open link in new tab

--- a/dom-problems/problem-2/index.html
+++ b/dom-problems/problem-2/index.html
@@ -13,7 +13,7 @@ adding it as the text for another P element on the page. -->
 <body>
 	<div>
 		<p>
-			<a href="https://www.espn.com" id="link">Click below for more info</a>
+			<a href="https://www.espn.com" target="_blank" id="link">Click below for more info</a>
 		</p>
 
 		<button onclick="hrefLink()">More Info</button>
